--- a/hons/docs/figures/exRampup.tex
+++ b/hons/docs/figures/exRampup.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{ | c | c | c | c | c | }
 \hline
-\# actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
- & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline
+\# Actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
+ & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline \hline
 {\bf 3} & 10.4015 & 28.5664 & 56.7657 & 95.1483 \\ \hline
 {\bf 4} & 14.221 & 43.6634 & 92.1117 & - \\ \hline
 {\bf 5} & 16.8804 & 50.8968 & - & - \\ \hline
