--- a/hons/docs/figures/exSingle.tex
+++ b/hons/docs/figures/exSingle.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ | c || c | c || c | c | c || c | c | c | }
 \hline
-{\bf n} & {\bf c} & {\bf Div} & {\bf Avg Opt} & {\bf Avg Heu} & {\bf Avg Prop} & {\bf Div Opt} & {\bf Div Heu} & {\bf Div Prop} \\ \hline
+{\bf n} & {\bf c} & {\bf Div} & {\bf AO} & {\bf AH} & {\bf AP} & {\bf DO} & {\bf DH} & {\bf DP} \\ \hline
 5 & 24 & 4 & 23.4347 & 23.5276 & 1.0037 & 24.3004 & 24.8576 & 1.0223 \\ \hline
 6 & 24 & 6 & 27.2224 & 27.8056 & 1.022 & 27.1996 & 29.5324 & 1.0881 \\ \hline
 7 & 24 & 4 & 31.0688 & 31.4394 & 1.0128 & 31.0186 & 33.2425 & 1.077 \\ \hline
