--- a/hons/docs/tIntroduction.tex
+++ b/hons/docs/tIntroduction.tex
@@ -67,7 +67,7 @@ In order to fulfil the goals stated in section \ref{secInGoal} this thesis makes
 	\item A formal understanding of the fault tolerance mechanisms as applicable to stream graphs.
 			This understanding is used to asses some of the properties of these mechanisms.
 	\item A mathematical model for use in ILP solvers to determine optimal assignment of actors with robustness requirements.
-			Our model is actually encoded in AMPL (See Appendix \ref{CHEESE}) and used to run experiments (see Chapter \ref{chapExperiment}).
+			Our model is actually encoded in AMPL (See Appendix \ref{adxModel}) and used to run experiments (see Chapter \ref{chapExperiment}).
 	\item Proof of the NP-Hardness for the robust assignment of actors.
 			This proof is shown for the simple assignment case, however it follows that more complex variants of the assignment problem are also NP-Hard.
 	\item A heuristic for the assignment of actors to processors, where run-time is bounded polynomially in the size of the problem.
