--- a/hons/docs/figures/exAccuracy.tex
+++ b/hons/docs/figures/exAccuracy.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{ | c | c | c | c | c | }
 \hline
-\# actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
- & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline
+\# Actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
+ & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline \hline
 {\bf 3} & 1.0316 & 1.0284 & 1.0201 & 1.0044 \\ \hline
 {\bf 4} & 1.0651 & 1.1122 & 1.0837 & - \\ \hline
 {\bf 5} & 1.0891 & 1.0759 & - & - \\ \hline
