--- a/hons/docs/figures/exFrequency.tex
+++ b/hons/docs/figures/exFrequency.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{ | c | c | c | c | c | }
 \hline
-\# actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
- & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline
+\# Actors & \multicolumn{4}{|c|}{Duplicates} \\ \cline{2-5}
+ & {\bf1} & {\bf2} & {\bf3} & {\bf4} \\ \hline \hline
 {\bf 3} & 8 & 8 & 8 & 8 \\ \hline
 {\bf 4} & 8 & 8 & 7 & 0 \\ \hline
 {\bf 5} & 8 & 8 & 0 & 0 \\ \hline
